--- a/Front/src/app/main/candidate-panel/candidate-panel.component.html
+++ b/Front/src/app/main/candidate-panel/candidate-panel.component.html
@@ -2,7 +2,7 @@
   <div class="candidate-profile-container">
     <div class="candidate-header-card">
       <div class="avatar-section">
-        <div class="avatar-placeholder">
+        <div class="avatar">
           <mat-icon class="avatar-icon">person</mat-icon>
         </div>
         <div class="candidate-info">
