--- a/Front/src/app/main/candidate-panel/candidate-panel.component.html
+++ b/Front/src/app/main/candidate-panel/candidate-panel.component.html
@@ -2,9 +2,12 @@
   <div class="candidate-profile-container">
     <div class="candidate-header-card">
       <div class="avatar-section">
-        <div class="avatar">
-          <mat-icon class="avatar-icon">person</mat-icon>
-        </div>
+        <app-editable-avatar 
+          [candidateId]="candidateData?.id ?? null" 
+          [profilePhotoUrl]="candidateData?.profilePhotoUrl"
+          size="large"
+          (photoChanged)="onPhotoChanged($event)">
+        </app-editable-avatar>
         <div class="candidate-info">
           <h2>{{ userData?.candidate?.name }} {{ userData?.candidate?.surname1 }} {{ userData?.candidate?.surname2 }}
           </h2>
