Candidate profile update fixed!!!

--- a/Front/src/app/main/candidate-panel/candidate-panel.component.html
+++ b/Front/src/app/main/candidate-panel/candidate-panel.component.html
@@ -195,29 +195,31 @@
                 <mat-form-field appearance="outline">
                   <mat-label>Situación Laboral</mat-label>
                   <mat-select formControlName="employmentStatus">
-                    <mat-option value="EMPLOYED">Empleado</mat-option>
-                    <mat-option value="UNEMPLOYED">Desempleado</mat-option>
-                    <mat-option value="STUDENT">Estudiante</mat-option>
-                    <mat-option value="FREELANCER">Freelancer</mat-option>
+                    <mat-option value="EMPLEADO">Empleado</mat-option>
+                    <mat-option value="DESEMPLEADO">Desempleado</mat-option>
+                    <mat-option value="ESTUDIANTE">Estudiante</mat-option>
+                    <mat-option value="FREELANCE">Freelance</mat-option>
+                    <mat-option value="BUSCA_ACTIVAMENTE">Buscando activamente</mat-option>
                   </mat-select>
                 </mat-form-field>
 
                 <mat-form-field appearance="outline">
                   <mat-label>Disponibilidad</mat-label>
                   <mat-select formControlName="availability">
-                    <mat-option value="IMMEDIATE">Inmediata</mat-option>
-                    <mat-option value="TWO_WEEKS">2 semanas</mat-option>
-                    <mat-option value="ONE_MONTH">1 mes</mat-option>
-                    <mat-option value="THREE_MONTHS">3 meses</mat-option>
+                    <mat-option value="INMEDIATA">Inmediata</mat-option>
+                    <mat-option value="UNA_SEMANA">En una semana</mat-option>
+                    <mat-option value="DOS_SEMANAS">En dos semanas</mat-option>
+                    <mat-option value="UN_MES">En un mes</mat-option>
+                    <mat-option value="MAS_DE_UN_MES">Más de un mes</mat-option>
                   </mat-select>
                 </mat-form-field>
 
                 <mat-form-field appearance="outline">
                   <mat-label>Modalidad Preferida</mat-label>
                   <mat-select formControlName="preferredModality">
-                    <mat-option value="REMOTE">Remoto</mat-option>
-                    <mat-option value="ONSITE">Presencial</mat-option>
-                    <mat-option value="HYBRID">Híbrido</mat-option>
+                    <mat-option value="PRESENCIAL">Presencial</mat-option>
+                    <mat-option value="REMOTO">Remoto</mat-option>
+                    <mat-option value="HIBRIDO">Híbrido</mat-option>
                   </mat-select>
                 </mat-form-field>
 
